syntax = "proto3";

package workout_training_api.ping.v1;

option go_package="workout-training-api/internal/grpc/generated/workout-training-api/workout/v1";

import "workout-training-api/workout/v1/create_workout.proto";
import "workout-training-api/workout/v1/update_workout.proto";
import "workout-training-api/workout/v1/delete_workout.proto";
import "workout-training-api/workout/v1/list_workout.proto";

service WorkoutService {
  rpc CreateWorkout (CreateWorkoutRequest) returns (CreateWorkoutResponse);

  rpc UpdateWorkout (UpdateWorkoutRequest) returns (UpdateWorkoutResponse);

  rpc DeleteWorkout (DeleteWorkoutRequest) returns (WorkoutDeleteResponse);

  rpc ListWorkouts (ListWorkoutsRequest) returns (ListWorkoutsResponse);

//  rpc WorkoutReport () returns ();
}